--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .banner-wrap {
-  background-image: url(images/me.jpg);
+  background-image: url();
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
