--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .banner-wrap {
-  background-image: url();
+  background-image: url(images/background-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
