--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
   padding: 15px 30px;
 }
 
-.container {
+.about {
   background: var(--primary-color);
   padding: 20px 0 20px 20px;
   border-radius: 10px;
