--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 .contact {
   background: var(--primary-color);
   border-radius: 10px;
-  padding: 30px 120px;
+  padding: 30px 100px;
 }
 
 .social-links a {
@@ -84,4 +84,17 @@
 
 .email-link a:hover {
   color: #4169e1;
+}
+
+footer {
+  padding: 30px;
+  height: 5px;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
