--- a/style.css
+++ b/style.css
@@ -103,20 +103,7 @@ footer a:hover {
   }
 }
 
-.contact h2 {
-  font-size: 30px;
-  color: #ededed;
-  text-align: center;
-  margin-bottom: 10px;
-}
-.contact h3 {
-  color: #ededed;
-  font-size: 20px;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.contact form {
+form {
   width: 600px;
   text-align: center;
 }
@@ -130,7 +117,7 @@ form .input-box {
   justify-content: space-between;
 }
 
-.contact .item {
+.item {
   width: 100%;
   padding: 18px;
   background-color: transparent;
