--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ footer a:hover {
 form {
   width: 600px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input-box .input-field {
@@ -128,7 +131,7 @@ form .input-box {
   margin: 12px 0;
 }
 
-form button {
+submit-button {
   color: #1f242d;
   font-size: 16px;
   font-weight: 600;
