--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ form .input-box {
   width: 100%;
   padding: 18px;
   background-color: transparent;
-  border: 1px solid aqua;
+  border: 1px solid #fff;
   border-radius: 6px;
   font-size: 16px;
   color: #ededed;
